bk_ida/gccida/c1/store_constructor
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4858:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4859:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *initial; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4865:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4879:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4880:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4881:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4882:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4887:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *set_constructor_bits; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4906:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v59; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4909:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v62; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4910:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v63; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4911:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v64; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4921:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v74; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4922:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v75; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4923:5: error: expected ';' after expression
tree v76; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4923:6: error: use of undeclared identifier 'v76'
tree v76; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4927:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4931:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v84; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/expr.c:4933:5: error: expected ';' after expression
tree v86; // r15 
    ^
    ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_constructor/src/obj/expr.o] Error 1
